--- a/0x02-i18n/templates/4-index.html
+++ b/0x02-i18n/templates/4-index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="{{ g.get('babel_locale', 'en') }}">
+<html lang="{{ get_locale() }}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Holberton</title>
+    <title>Flask Babel</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>{{ _('Hello World') }}</h1>
 </body>
 </html>
